# SCHE-MA

./: .gitignore  260602_SCHE-MA_진행공유.pptx  Dockerfile  README.md  amber-manifest.json5  poc_diff  poc_email  poc_html  poc_long  poc_msg  poc_script  poc_troff  pyproject.toml  scenario.leaderboard.toml  scenario.local.toml
.github/workflows/: build-image.yml
.omc/state/: agent-replay-273f4115-3f43-4ae6-9af9-4c8e39df28e4.jsonl
config/: schemata.toml
config/templates/: routing_rules.json  schemata.toml
data/: cybergym_1507.txt  mask_map.json  subset_49_remaining_from_54949.txt  subset_49_tasks.txt  subset_tasks.txt  tasks_metadata.json
data/okf_fuzz_finds/: oss-fuzz_382721849.json  oss-fuzz_42537594.json  oss-fuzz_42537734.json  oss-fuzz_42537828.json  oss-fuzz_42537883.json
docs/: M3_claude_api_backend_report.md  M6a-submission-skeleton.md  agent-techniques-research-report.md  arena-level1-redesign.md  experiment-roadmap.md  pipeline.html  technique-matrix.md
legacy/: README.md
legacy/deploy/: Dockerfile  amber-manifest.json5  build-image.yml  scenario.leaderboard.toml  smoke_arvo_10400.py
notes/manual/: manual_poc_log.md
prompts/: stage1_recon.md  stage2_analyze.md  stage3_generate.md  stage4_discriminate.md
scripts/: analyze_subset.py  make_okf_split.py  merge_traces.py  okf_distill.py  okf_fuzz.py  okf_fuzz_verify.py  okf_knowledge.py  okf_record.py  okf_solve.py  run_task.py  setup.sh  setup_env.sh  smoke_arvo_10400.py  start_server.sh
tests/: test_a2a_agent.py  test_a2a_executor.py  test_atomic_vulns.py  test_backend_contract.py  test_claude_api.py  test_codemap.py  test_confirm_winner.py  test_discriminate.py  test_escalation.py  test_format_knowledge.py  test_harness.py  test_intake.py  test_level3_intel.py  test_okf_catalog.py  test_openai_backend_contract.py  test_prompt_cache.py  test_prompt_render.py  test_router.py  test_routing.py  test_routing_agent.py  test_routing_backend.py  test_runner.py  test_skill_registry.py  test_submit_parsing.py  test_tool_dispatch.py  test_transport.py
(+115 files in other folders)
