[project]
name = "schemata"
version = "0.1.0"
description = "SCHE-MA — Security CHallenge Exploitation Multi-Agent for CyberGym (dual backend: Claude Code / Claude API)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.69",
    "claude-agent-sdk>=0.1",
    "httpx>=0.27",
    "requests>=2.31",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "a2a-sdk[http-server]>=0.3.20,<1.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
schemata = "schemata.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
