[project]
name = "schemata"
version = "0.1.0"
description = "SCHE-MA — Security CHallenge Exploitation Multi-Agent for CyberGym (dual backend: Claude Code / Claude API)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.69",
    "openai>=1.40",
    "claude-agent-sdk>=0.1",
    "httpx>=0.27",
    "requests>=2.31",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "python-dotenv>=1.0",
    # a2a-sdk + uvicorn were only used by the retired AgentBeats arena server
    # (now src/schemata/legacy/a2a/). Re-add them to revive it — see legacy/README.md.
    # tree-sitter{,-c,-cpp} were dropped with the Stage-1 `read_outline` outline tool:
    # Recon now reads the pre-injected harness + whole suspect files (see src/schemata/pipeline/harness.py).
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
schemata = "schemata.cli.main:app"
schema = "schemata.cli.repl:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
